--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,8 +7,8 @@
 # every BCF file used here must correspond to the same
 # reference genome and thus to the same scaffold groups file.
 # These are identified here:
-fai_path: .test/resources/genome.fasta.fai
-scaff_group_path: .test/resources/scaffold_groups.tsv
+fai_path: ../config/Otsh_v1.0_genomic.fna.fai
+scaff_group_path: ../config/scaffold_groups.tsv
 
 
 
@@ -18,18 +18,11 @@ scaff_group_path: .test/resources/scaffold_groups.tsv
 # bcf file, so they go here.  If there are meta data files for association
 # studies in ANGSD, these go here as the dotsample.
 bcf:
-  testy:
-    path: ".test/resources/100_fish.bcf"
+  cal_chinook:
+    path: "data/Cal-Chinook-160.vcf.gz"
     sample_subsets:
       all:
-        path: .test/sample_subsets/all-fish.txt     #  all 100 fish
-        dotsample: .test/data/dot-samples-all.tsv
-      males:
-        path: .test/sample_subsets/males.txt    # just the males
-        dotsample: .test/data/dot-samples-males.tsv
-      females:
-        path: .test/sample_subsets/females.txt  # just the females
-        dotsample: .test/data/dot-samples-females.tsv 
+        path: ../config/sample_names.txt
 
 
 # same thing here, we can define different sets of bcftools filters
@@ -87,11 +80,7 @@ params:
 # or possibly multiple filenames.
 
 targets:
-  do_asso:
-    - ["standard", "all", "age_cohort_4PCs"]
-    - ["standard", "males", "age_cohort_4PCs"]
-    - ["standard", "females", "age_cohort_4PCs"]
   beagle_gl: # this is here in case you just want to 
-    - ["standard", "males", "dummy"]
+    - ["standard", "all", "dummy"]
 
 
